--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <script src="js/jquery.min.js"></script>
    <script src="js/jquery-ui.min.js"></script>
    <link rel="stylesheet" href="css/jquery-ui.min.css" rel="stylesheet"></link>
-   <script src="http://docusky.digital.ntu.edu.tw/docusky/js.ui/docusky.ui.getDbCorpusDocumentsSimpleUI.js"></script>
-   <base href="http://docusky.digital.ntu.edu.tw/docusky/"/>
+   <script src="../../js.ui/docusky.ui.getDbCorpusDocumentsSimpleUI.js"></script>
+   <base href="../.."/>      <!-- http://docusky.digital.ntu.edu.tw/docusky/ -->
    <style type="text/css">
       span.modifyDocButton { background-color:brown; border:2px brown solid; border-radius:4px; color:white; font-size:smaller; padding:2px; cursor:pointer }
       div.boxContainer { position:absolute; left: 55px; top: 20px; width:800px; height:auto; 
