--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
    <button id='downloadButton' onclick='download()'>下載DocuXml</button>
    <input type='file' id='uploadedFile' multiple='multiple' accept='.xml'>
    <button id="uploadButton" onclick='upload()'>上傳DocuXml</button>
-   
    <br/><br/>
-   <span　id='rangeSelection' style="display: none;">
+   <div id='rangeSelection' style="display: none;">
          範圍選取： Document Id 從
          <input type="number" id="startIndex" size="2px">
          ~
          <input type="number" id="endIndex" size="2px">
          <button id='rangeButton'>選取</button>
-   </span>
+   </div>
    <div id='listBox' style="display: none;"></div>
    <div id="divContent" class="divContent"></div>
    
@@ -75,23 +74,21 @@ const initialize = () => { //  2018-04-01 wayne
    closeListBox()
    // 2018-05-05 wayne range selection feature
    const docNum = docuSkyObj.docList.length
-   $('#startIndex').val(0)
-   $('#endIndex').val(docNum - 1)
-   $('#ragneButton').click(function () {
-         const start = $('#stratIndex').val()
-         const end = $('#endIndex').val()
+   $('#rangeSelection').css('display', 'inline')
+   $('#startIndex').val(1)
+   $('#endIndex').val(docNum)
+   $('#rangeButton').click(function () {
+         const start = $('#startIndex').val() - 1
+         const end = $('#endIndex').val() - 1
          try {
-               if (start > end) throw '起始引值錯誤'
-               else if ( end >= docNum) throw '結尾索引值錯誤'
-               else if (start < 0 || end < 0) throw '索引值須為正值'
+               if (start > end) throw '起始編號需大於結尾編號'
+               else if ( end >= docNum) throw '結尾編號錯誤'
+               else if (start < 0 || end < 0) throw '編號須大於 0'
                for (let i = start; i <= end; i++) {
-                     addDcoument(i)
+                     addDocument(i)
                }
          } catch(err) {
                alert(err)
-         }
-         if (end < start) {
-
          }
    })
 
